--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>PlatziGame</title>
 </head>
 <body>
@@ -16,7 +17,12 @@
             <button id="right">Derecha</button>
             <button id="down">Abajo</button>
         </div>
-
+        <div class="messages">
+            <!-- Pendiednte -->
+            <p>Parrafo de ejemplo</p>
+        </div>
     </div>
+    <script src="./maps.js"></script>
+    <script src="./game.js"></script>
 </body>
 </html>
