sistema de tiempo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="messages">
             <!-- Pendiednte -->
             <p>Vidas: <span id="lives"></span></p>
+            <p>Tiempo:⌛ <span id="time"></span></p>
         </div>
     </div>
     <script src="./maps.js"></script>
